<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="10dp"
    android:background="@drawable/notes_show_background"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/this_is_title"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/this_is_day"
            android:textColor="#212121"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_white"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/edit_svgrepo_com"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btndelet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_white"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/bin_svgrepo_com"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>