<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C4C4"
    android:orientation="vertical"
    tools:context=".UpdateNotes">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/correct_menu">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar3">

        <EditText
            android:id="@+id/updatetitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar2"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/Time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:paddingStart="10dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textcount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:text="@string/text_count"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <EditText
            android:id="@+id/updatecontent"
            android:layout_width="match_parent"
            android:layout_height="585dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/write_a_notes"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="50dp"
            android:scrollbars="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updatetitle"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>