<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C4C4"
    android:orientation="vertical"
    tools:context=".WriteANotes">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/correct_menu">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar2"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/updatetitle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@id/toolbar2"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:paddingStart="10dp"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry,TextSizeCheck" />

                <EditText
                    android:id="@+id/updatecontent"
                    android:layout_width="match_parent"
                    android:layout_height="585dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/notes_title"
                    android:inputType="textMultiLine"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:scrollbars="vertical"
                    android:textColorHint="#757575"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/updatetitle"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>